--- a/functions/package.json
+++ b/functions/package.json
@@ -10,7 +10,9 @@
   "author": "David Mateo <davidmateo@outlook.com>",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "chrome-aws-lambda": "^2.1.1",
+    "dotenv": "^8.2.0",
     "puppeteer-core": "^2.1.1"
   },
   "devDependencies": {
